Windows build works

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,3 +8,11 @@ target_link_libraries(imgui-example
     imgui-sdl
     imgui-opengl3
 )
+
+if(WIN32)
+  target_link_libraries(imgui-example PUBLIC SDL2main)
+  add_custom_command(TARGET imgui-example POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        $<TARGET_FILE:SDL2>
+        $<TARGET_FILE_DIR:imgui-example>)
+endif()
