--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,14 +5,15 @@ add_executable(imgui-example
 # Yep, that's it!
 target_link_libraries(imgui-example
   PUBLIC
-    imgui-sdl
-    imgui-opengl3
+    imgui_sdl
 )
 
 if(WIN32)
   target_link_libraries(imgui-example PUBLIC SDL2main)
-  add_custom_command(TARGET imgui-example POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        $<TARGET_FILE:SDL2>
-        $<TARGET_FILE_DIR:imgui-example>)
+  if (BUILD_SHARED_LIBS)
+    add_custom_command(TARGET imgui-example POST_BUILD
+      COMMAND ${CMAKE_COMMAND} -E copy_if_different
+          $<TARGET_FILE:SDL2>
+          $<TARGET_FILE_DIR:imgui-example>)
+  endif()
 endif()
